--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
     <footer>
       &lt;&lt;&lt; &copy;
-      <a href="./M-Balloons.JPG" download>Yusuf</a> &gt;&gt;&gt;
+      <a href="./M-Balloons.JPG" download><b>Yusuf</b></a> &gt;&gt;&gt;
 
       <a href="mailto:faladeyusuf54@gmail.com">Email</a>
       <a href="tel:+2347036513120">Contact</a>
